# Financial-world-monitor

./: .env.example  .env.production.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ingest.yml
backend/: alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_copilot_tables.py
backend/app/: config.py  database.py  main.py  nifty100.py  scheduler.py
backend/app/ai/: base.py  embeddings.py  router.py
backend/app/ai/adapters/: openai_compat.py  vllm.py
backend/app/api/: health.py
backend/app/modules/alerts/: models.py  router.py
backend/app/modules/audit/: models.py  router.py
backend/app/modules/auth/: models.py  router.py  service.py
backend/app/modules/copilot/: __init__.py  models.py  prompt_manager.py  query_classifier.py  router.py  schemas.py  service.py
backend/app/modules/documents/: models.py  router.py
backend/app/modules/entities/: models.py  router.py
backend/app/modules/events/: models.py  router.py
backend/app/modules/evidence/: __init__.py  models.py  router.py
backend/app/modules/graph/: models.py  router.py
backend/app/modules/impact/: models.py  router.py
backend/app/modules/ingestion/: __init__.py  models.py  router.py  service.py
backend/app/modules/ingestion/connectors/: __init__.py  base.py  bse.py  gdelt.py  nse.py  rbi.py  sebi.py  world_monitor.py
backend/app/modules/intelligence/: __init__.py  classification.py  entity_extraction.py  entity_extractor.py  models.py  openbb.py  pipeline.py  router.py  security_master.py  validation.py
backend/app/modules/portfolios/: models.py  router.py  service.py
backend/app/modules/sources/: models.py  router.py
backend/app/modules/tenants/: models.py  router.py
backend/tests/: conftest.py  test_ai.py  test_connectors.py  test_copilot.py  test_evidence.py  test_health.py  test_ingestion_connectors.py  test_portfolios.py
docs/: ARCHITECTURE.md  DATA_SOURCES.md  DEMO.md  DEPLOYMENT.md  MODEL_EVALUATION.md  MODEL_STRATEGY.md  PRIVACY.md  QUICKSTART.md  ROADMAP.md  SECURITY.md  WORLD_MONITOR_INTEGRATION.md
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: CausalChain.tsx  ConfidenceBar.tsx  DataTable.tsx  EventCard.tsx  EvidenceCitation.tsx  FilterBar.tsx  ImpactBadge.tsx  LiveIndicator.tsx  MapView.tsx  PageHeader.tsx  Sidebar.tsx  StatCard.tsx
frontend/src/app/copilot/: page.tsx
frontend/src/app/evidence/: page.tsx
frontend/src/app/health/: page.tsx
frontend/src/app/intelligence/: page.tsx
frontend/src/app/portfolio/: page.tsx
frontend/src/lib/: api.ts
frontend/src/types/: react-simple-maps.d.ts
infra/: .dockerignore  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
scripts/: demo_assess.py  demo_create_event.py  demo_portfolio.csv  start.ps1  start.sh
