[project]
name = "fios-backend"
version = "0.1.0"
description = "FIOS Backend - Financial Intelligence Operating System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis[hiredis]>=5.2.0",
    "httpx>=0.28.0",
    "sentence-transformers>=3.3.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "pgvector>=0.3.0",
    "structlog>=24.4.0",
    "feedparser>=6.0.11",
    "docling>=2.15.0",
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.8.0",
    "tenacity>=8.3.0",
    "apscheduler>=3.10.4",
    "python-dateutil>=2.9.0",
    "simhash>=2.0.0",
    "xxhash>=3.5.0",
    "gliner>=1.0.0",
    "transformers>=4.40.0",
    "torch>=2.3.0",
    "rapidfuzz>=3.5.0",
    "networkx>=3.2",
    "openbb>=2.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["alembic/versions/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
